--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fairness-diagnostics",
   "version": "0.0.0",
   "description": "Machine learning fairness diagnostics",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/citp/fairness_diagnostics#readme",
   "dependencies": {
-    "angular": "^1.7.2",
     "bower": "^1.8.4",
     "http-server": "^0.11.1"
   },
