--- a/app/data_config.json
+++ b/app/data_config.json
@@ -25,6 +25,11 @@
           "outcome_attribute_name": "outcome",
           "positive_outcome_value": "True"
         }
+      ],
+      "predictors": [
+          "pred1",
+          "pred2",
+          "pred3"
       ]
     },
 
@@ -58,6 +63,11 @@
           "outcome_attribute_name": "outcome1",
           "positive_outcome_value": "True"
         }
+      ],
+      "predictors": [
+          "pred4",
+          "pred5",
+          "pred6"
       ]
     }
   ]
